--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -52,6 +52,20 @@
     transform: translate3d(250px, 0, 0);
 }
 
+.menu .menu-right {
+  position: fixed;
+  background: #333333;
+  right: -250px;
+}
+
+.menu .menu-right.menu-visible {
+    -webkit-transform: translate3d(-250px, 0, 0);
+    -moz-transform: translate3d(-250px, 0, 0);
+    -o-transform: translate3d(-250px, 0, 0);
+    -ms-transform: translate3d(-250px, 0, 0);
+    transform: translate3d(-250px, 0, 0);
+}
+
 .menu .menu-item {
   float: left;
   width: 100%;
