--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,14 @@
   width: 100%;
 }
 
+form.event_issue {
+  display: none;
+}
+
+form.rule_issue {
+  display: none;
+}
+
 .message-pic {
   width: 20%;
 }
@@ -34,6 +42,7 @@
 #edit-house-manager-form-div {
     display: none;
 }
+
 
 .form-submit{
   background-color: blue;
@@ -73,6 +82,10 @@ form.item_issue {
 
 #edit_user_info_user_page_form {
   display: none;
+}
+
+#edit-house-manager-form-div {
+    display: none;
 }
 
 .rule-table {
