--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,110 @@
 .edit-house-form-div {
-  display: none;
+display: none;
+}
+.chore {
+position: relative;
+border-style: groove;
+border-color: rgba(0, 140, 186, 0.27);
+margin: 1em ;
+width: 23em;
+height: 16em;
+float: left;
+margin-left: 5em;
+background-color: 00526D;
+
+
+}
+.chore_task h5 {
+position: relative;
+bottom: 4em;
+margin-left: auto;
+margin-right: auto;
+box-sizing: border-box;
+text-align: center;
+letter-spacing: -0.02em;
+}
+.edit_chore {
+position: relative;
+margin-left: 84%;
+}
+.chore_issue{
+position: relative;
+bottom: 5em;
+}
+.completed_chore_count{
+text-align: center;
+clear: b
+}
+.complete_log {
+position: relative;
+margin-left: 20%;
+bottom: 8.1em;
+}
+.chore_promise {
+position: relative;
+margin-left: 60%;
+bottom: 13em;
+}
+.delete_chore {
+position: relative;
+float: right;
+bottom: 10.24em;
+}
+.view_log {
+position: relative;
+bottom: 5.25em;
+}
+#chore_title {
+text-align: center;
+}
+.user_chore_count {
+position: relative;
+bottom: 12.5em;
+font-size: 1em;
+width: 5%;
+height: 5%;
+left: 8.25em;
+}
+th.user_chore_count{
+vertical-align: top;
+height: 10%;
+text-align: center;
+}
+td.user_chore_count{
+vertical-align: top;
+text-align: center;
+
+}
+#chore_form{
+position: fixed
+float: right;
+}
+h4#chore_form{
+position: fixed
+float: right;
+}
+#chore_list {
+float: right;
+}
+
+.content{
+background: rgba(214,245,255,1);
+background: -moz-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
+background: -webkit-gradient(left bottom, right top, color-stop(15%, rgba(214,245,255,1)), color-stop(37%, rgba(214,245,255,1)), color-stop(40%, rgba(214,245,255,1)), color-stop(81%, rgba(52,196,244,1)), color-stop(94%, rgba(0,180,240,1)));
+background: -webkit-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
+background: -o-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
+background: -ms-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
+background: linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6f5ff', endColorstr='#00b4f0', GradientType=1 );
+        }
+
+.chore{
+  background: rgba(212,228,239,1);
+background: -moz-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
+background: -webkit-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+background: -o-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+background: -ms-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+background: radial-gradient(ellipse at center, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=1 );
 }
