--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -40,10 +40,14 @@
 }
 
 .logout {
+  text-align: center;
+  font-size: 3em;
+  color: #B0B0B0;
   background-color: #333333;
 }
 
 .logout:hover {
+  color:#F0F0F0;
   background-color: #333333;
 }
 
@@ -73,6 +77,20 @@
     -o-transform: translate3d(250px, 0, 0);
     -ms-transform: translate3d(250px, 0, 0);
     transform: translate3d(250px, 0, 0);
+}
+
+.menu .menu-right {
+  position: fixed;
+  background: #333333;
+  right: -250px;
+}
+
+.menu .menu-right.menu-visible {
+    -webkit-transform: translate3d(-250px, 0, 0);
+    -moz-transform: translate3d(-250px, 0, 0);
+    -o-transform: translate3d(-250px, 0, 0);
+    -ms-transform: translate3d(-250px, 0, 0);
+    transform: translate3d(-250px, 0, 0);
 }
 
 .menu .menu-item {
@@ -137,4 +155,104 @@
 .today:after {
    right: 0;
    left: auto;
+}
+
+#low {
+  color: #FFA500;
+}
+
+#out {
+  color: red;
+}
+
+#high {
+  color: green;
+}
+
+.item-name {
+  display: inline-block;
+  margin-left: -0.1em;
+}
+
+.item-issue {
+  display: inline-block;
+  margin-left: -0.1em;
+}
+
+.item-info {
+  display: inline-block;
+  margin-left: 3em;
+  margin-right: 1em;
+}
+
+.submit-promise {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 12px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.submit-promise:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.stock-status {
+  font-size: 1em;
+  margin-bottom: 2em;
+  float: right;
+  position: relative;
+}
+
+.promise-status {
+  font-size: 1em;
+  margin-bottom: 2em;
+  position: relative;
+  float: right;
+  margin-top: -4em;
+}
+
+.user-promise {
+  text-align: center;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: -4em;
+}
+
+.issue-body {
+  display: inline-block;
+  margin-left: 3em;
+  margin-top: 3em;
+}
+
+#issue-intro {
+  color: red;
+  margin-top: 2em;
+}
+
+#issues-pic {
+  float: right;
+  margin-top: -3em;
+}
+
+#notes {
+  border-radius: 50%;
+  padding: 0.3em;
+  background: red;
+  margin-right: 1em;
 }
