--- a/app/views/communal_items/_item.html.erb
+++ b/app/views/communal_items/_item.html.erb
@@ -62,9 +62,11 @@
   <div class="issue-body">
     <% unless item.issues.count == 0 %>
       <div id="issue-intro">This item has some issues!</div>
+      <div class="issue-content">
       <% item.issues.each do |issue| %>
         <%= render partial: "issue", locals: { issue: issue } %>
       <% end %>
+      </div>
     <% end %>
   </div>
   </div>
