--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -58,23 +58,15 @@ bottom: 5.25em;
 text-align: center;
 }
 .user_chore_count {
+clear: both;
 position: relative;
-bottom: 12.5em;
+bottom: 15.5em;
 font-size: 1em;
 width: 5%;
 height: 5%;
-left: 8.25em;
+margin: auto;
 }
-th.user_chore_count{
-vertical-align: top;
-height: 10%;
-text-align: center;
-}
-td.user_chore_count{
-vertical-align: top;
-text-align: center;
 
-}
 #chore_form{
 position: fixed
 float: right;
@@ -87,16 +79,6 @@ float: right;
 float: right;
 }
 
-.content{
-background: rgba(214,245,255,1);
-background: -moz-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
-background: -webkit-gradient(left bottom, right top, color-stop(15%, rgba(214,245,255,1)), color-stop(37%, rgba(214,245,255,1)), color-stop(40%, rgba(214,245,255,1)), color-stop(81%, rgba(52,196,244,1)), color-stop(94%, rgba(0,180,240,1)));
-background: -webkit-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
-background: -o-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
-background: -ms-linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
-background: linear-gradient(45deg, rgba(214,245,255,1) 15%, rgba(214,245,255,1) 37%, rgba(214,245,255,1) 40%, rgba(52,196,244,1) 81%, rgba(0,180,240,1) 94%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6f5ff', endColorstr='#00b4f0', GradientType=1 );
-        }
 
 .chore{
   background: rgba(212,228,239,1);
@@ -107,4 +89,8 @@ background: -o-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rg
 background: -ms-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
 background: radial-gradient(ellipse at center, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=1 );
+}
+
+body{
+  background-color: #D5E8FF;
 }
