--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -32,6 +32,7 @@
         <%= f.submit "Post", :class => "button", :id => "submit-message" %>
       <% end %>
     </div>
+  <div class="message-content-valid"></div>
   </div>
   <div class="small-12 large-2 columns"><br></div>
 </div>
