--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -5,66 +5,51 @@ display: none;
 position: relative;
 border-style: groove;
 border-color: rgba(0, 140, 186, 0.27);
-margin: 1em ;
-width: 23em;
-height: 16em;
-float: left;
-margin-left: 5em;
-background-color: 00526D;
-
-
+border-width: .25em;
+width: 20em;
+height: 15em;
+margin: auto;
 }
 .chore_task h5 {
 position: relative;
-bottom: 4em;
-margin-left: auto;
-margin-right: auto;
-box-sizing: border-box;
+margin: auto;
+top: 2em;
 text-align: center;
-letter-spacing: -0.02em;
 }
-.edit_chore {
-position: relative;
-margin-left: 84%;
-}
+
 .chore_issue{
 position: relative;
-bottom: 5em;
+float: left;
+margin: .5%;
 }
-.completed_chore_count{
-text-align: center;
-clear: b
-}
-.complete_log {
-position: relative;
-margin-left: 20%;
-bottom: 8.1em;
-}
-.chore_promise {
-position: relative;
-margin-left: 60%;
-bottom: 13em;
-}
+
+
 .delete_chore {
 position: relative;
 float: right;
-bottom: 10.24em;
+margin: .5%;
 }
-.view_log {
-position: relative;
-bottom: 5.25em;
-}
+
 #chore_title {
+margin: auto;
 text-align: center;
 }
 .user_chore_count {
 clear: both;
 position: relative;
-bottom: 15.5em;
-font-size: 1em;
-width: 5%;
-height: 5%;
-margin: auto;
+margin-left: auto;  
+margin-right: auto;
+top: 2.5em;
+border-collapse: collapse;
+}
+th{
+  background-color: #4E99A3;
+}
+tr{
+  background-color: #0BBCE3;
+}
+.user_chore_count td {
+  text-align: center;
 }
 
 #chore_form{
@@ -75,12 +60,20 @@ h4#chore_form{
 position: fixed
 float: right;
 }
-#chore_list {
+
+ul.button-group.round.even-4{
+  position: relative;
+margin-right: auto;
+margin-left: 1%;
+top: 3.35em;
+}
+/*#chore_list {
 float: right;
 }
 
+.
 
-.chore{
+/*.chore{
   background: rgba(212,228,239,1);
 background: -moz-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
 background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
@@ -90,7 +83,7 @@ background: -ms-radial-gradient(center, ellipse cover, rgba(212,228,239,1) 0%, r
 background: radial-gradient(ellipse at center, rgba(212,228,239,1) 0%, rgba(134,174,204,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=1 );
 }
-
+*/
 body{
   background-color: #D5E8FF;
 }
