--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,23 +1,17 @@
-
 <div class="row">
   <div class="large-3 columns"><br />
   </div>
   <div id="chore_list" >
     <% if @chores != nil %>
     <div id="chore_title"><h4>Chores</h4></div>
-    <% @chores.each do |chore| %>
-    <% log = @user.chore_logs.where(chore_id: chore.id ) %>
-    <div class="chore" data-anijs="if: mouseover, do: swing animated, o">
-      <%= button_to "Edit", edit_chore_path(chore),method: :get, :class => ["button tiny", "edit_chore" ]  %>
-      <%= button_to "Issue", chore_chore_logs_path(chore),method: :post, :class =>["button tiny", "chore_issue"] %>
+    <div class="chore">
+      <% @chores.each do |chore| %>
+
+      <% log = @user.chore_logs.where(chore_id: chore.id ) %>
+      <%= button_to "Delete", chore_path(chore), method: :delete, :class => ["button round tiny", "button alert", "delete_chore"], data: {confirm: "Are you sure?"}  %>
+      <%= button_to "Issue", chore_chore_logs_path(chore),method: :post, :class =>["button round tiny", "chore_issue"] %>
       <div class="chore_task"><h5><%= chore.task %></h5> <br></div>
-      
-      <%= button_to "Complete", chore_chore_logs_path(chore),method: :post, :class => ["button tiny","complete_log"] %>
-      <%= button_to "Promise", chore_chore_logs_path(chore),method: :post, :class => ["button tiny", "chore_promise" ] %>
-      <%= button_to 'View Log', chore_path(chore),method: :get, :class => ["button tiny", "view_log"] %>
-      <%= button_to "Delete", chore_path(chore), method: :delete, :class => ["button tiny", "button alert", "delete_chore"], data: {confirm: "Are you sure?"}  %>
-      <div class="completed_chore_count">
-        
+           <div class="completed_chore_count">     
         <table class="user_chore_count">
           <thead>
             <% @users.each do |user| %>
@@ -34,23 +28,20 @@
                 <%= logs.count %>
               </td>
               <% end %>
-            </tr>
-            
+            </tr>         
           </tbody>
         </table>
-
-
-      </div>
-
-      
+      </div> 
+      <ul class="button-group round even-4">
+        <li> <%= link_to "Edit", edit_chore_path(chore),method: :get, :class => ["button tiny", "edit_chore" ]  %></li>
+        <li><%= link_to "Complete", chore_chore_logs_path(chore),method: :post, :class => ["button tiny","complete_log"] %></li>
+        <li><%= link_to "Promise", chore_chore_logs_path(chore),method: :post, :class => ["button tiny", "chore_promise" ] %></li>
+        <li><%= link_to 'Logs', chore_path(chore),method: :get, :class => ["button tiny", "view_log"] %></li>
+      </ul>  
+   
+      <% end %>    
+      <% end %>
     </div>
-
-
-    <% end %>
-
-    
-    <% end %>
-
   </div>
   <div id="chore_form">
     <%= render 'chores/form' %>
