--- a/app/views/property_managers/_form.html.erb
+++ b/app/views/property_managers/_form.html.erb
@@ -1,4 +1,4 @@
-      <%= form_for [@house, @property_manager] do |f|%>
+      <%= form_for [@house, @property_manager || PropertyManager.new] do |f|%>
       <fieldset>
       <legend>Property Manager's Information</legend>
       <%= f.label :name %>
@@ -7,7 +7,7 @@
       <%= f.text_field :phone %>
       <%= f.label :email %>
       <%= f.text_field :email %>
-      <%= f.fields_for @address do |address_form| %>
+      <%= f.fields_for @address || Address.new do |address_form| %>
       <%= f.label :street %>
       <%= address_form.text_field :street %>
       <%= f.label :city %>
