--- a/app/views/property_managers/new.html.erb
+++ b/app/views/property_managers/new.html.erb
@@ -1,10 +1,9 @@
 <div class="row">
-<div class="large-3 columns"><br />
-  </div>
-  <div class="large-6 columns">
-<%= render 'houses/form' %>
+  <div class="small-6 large-2 columns"><br></div>
+  <div class="small-6 large-8 columns">
+<%= render 'property_managers/form' %>
+
 
   </div>
-  <div class="large-3 columns"><br /></div>
+  <div class="small-12 large-2 columns"><br></div>
 </div>
-
