--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -9,7 +9,7 @@
     <% log = @user.chore_logs.where(chore_id: chore.id ) %>
     <div class="chore" data-anijs="if: mouseover, do: swing animated, o">
       <%= button_to "Edit", edit_chore_path(chore),method: :get, :class => ["button tiny", "edit_chore" ]  %>
-      <%= button_to "Issue", chore_chore_logs_path(chore),method: :post, :class =>["button tiny", "chore_issue"] %>
+      <%= image_tag("issue-mark.png", size: "50x50", class: "chore_issue")%>
       <div class="chore_task"><h5><%= chore.task %></h5> <br></div>
       
       <%= button_to "Complete", chore_chore_logs_path(chore),method: :post, :class => ["button tiny","complete_log"] %>
