--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,6 +1,20 @@
- <%= event.user.first_name %>: <%= event.name %> <br>
+<div class="each-event">
+      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <%= event.user.first_name %>: <%= event.name %> <br>
       Description: <%= event.description %><br>
       Date: <%= event.date%><br>
       <%= link_to "Destroy", house_event_path(@house, event), method: :delete,
-      data: {confirm: "Are you sure?"} %><br>
-      <%= link_to 'Edit', edit_house_event_path(@house, event) %><br><br>
+      data: {confirm: "Are you sure?"}, :class => "destroy_event"%> /
+      <%= link_to 'Edit', edit_house_event_path(@house, event) %><br>
+      
+      <%= form_for :issue, url: "/houses/#{@house.id}/events/#{event.id}/issue", html: { class: "event_issue"} do |f| %>
+      <%= f.text_area :reason, :placeholder => "Reason" %>
+      <%= f.submit "Submit Issue", class: "button tiny" %>
+      <% end %>
+      <div class="issue_body">
+      <% if event.issues %>
+      <% event.issues.each do |issue| %>
+      <%= render partial: "issue", locals: { issue: issue }, layout: false %>
+      <% end %>
+      <% end %>
+      </div>     
+      </div>
