--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,29 +6,18 @@
       <h4>Events:</h4>
       <% if @events == nil %>
       <p>Your house has has no events</p>
-      <% end %>
-      <% if @events != nil %>
-      <% @events.each do |event| %>
-      <div class="each-event">
-      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <%= event.user.first_name %>: <%= event.name %> <br>
-      Description: <%= event.description %><br>
-      Date: <%= event.date%><br>
-      <%= link_to "Destroy", house_event_path(@house, event), method: :delete,
-      data: {confirm: "Are you sure?"}, :class => "destroy_event"%> /
-      <%= link_to 'Edit', edit_house_event_path(@house, event) %><br>
-      
-      <%= form_for :issue, url: "/houses/#{@house.id}/events/#{event.id}/issue", html: { class: "event_issue"} do |f| %>
-      <%= f.text_area :reason, :placeholder => "Reason" %>
-      <%= f.submit "Submit Issue", class: "button tiny" %>
-      <% end %>
-      <div class="issue_body">
-      <% if event.issues %>
-      <% event.issues.each do |issue| %>
-      <%= render partial: "issue", locals: { issue: issue } %>
-      <% end %>
-      </div>
-      <% end %>
-      </div>
+      <% else %>
+      <% @events_by_date.each do |date, events_in_date| %>
+        <% if (date.year == @today.year) && (date.month == @today.month) && (date.day == @today.day) %>
+        <div class="fridge-today"><span class="today"> Today </span></div>
+        <% elsif (date.year == @today.year) && (date.month == @today.month) && (date.day - @today.day == 1) %>
+        <div class="fridge-today"><span class="today"> Tomorrow </span></div>
+        <% else %>
+        <div class="fridge-today"><span class="today"><%=date.year%> - <%=date.month%> - <%=date.day%></span></div>
+        <% end %>
+        <% events_in_date.each do |event| %>
+        <%= render partial: "event", locals: {event: event} %>
+        <% end %>
       <% end %>
       <% end %>
     </div>
