--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,10 +1,13 @@
 <div class="each-event">
-      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <%= event.user.first_name %>: <%= event.name %> <br>
-      Description: <%= event.description %><br>
-      Date: <%= event.date%><br>
-      <%= link_to "Destroy", house_event_path(@house, event), method: :delete,
-      data: {confirm: "Are you sure?"}, :class => "destroy_event"%> /
-      <%= link_to 'Edit', edit_house_event_path(@house, event) %><br>
+      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <span class="item-name" id="high">@<%= event.user.first_name.capitalize %>: <%= event.name.split.map(&:capitalize).join(' ') %></span> <br>
+      <div class="item-info">
+      <strong>Description:</strong> <%= event.description %><br>
+      <span id="low"><strong>Date:</strong> <%= event.date%></span><br>
+      
+      <%= link_to 'Edit', edit_house_event_path(@house, event) %> / 
+      <%= link_to "Delete", house_event_path(@house, event), method: :delete,
+      data: {confirm: "Are you sure?"}, :class => "destroy_event"%>
+      <br>
       
       <%= form_for :issue, url: "/houses/#{@house.id}/events/#{event.id}/issue", html: { class: "event_issue"} do |f| %>
       <%= f.text_area :reason, :placeholder => "Reason" %>
@@ -16,5 +19,6 @@
       <%= render partial: "issue", locals: { issue: issue }, layout: false %>
       <% end %>
       <% end %>
-      </div>     
+      </div>  
+      </div>    
       </div>
