--- a/app/views/events/_issue.html.erb
+++ b/app/views/events/_issue.html.erb
@@ -1,1 +1,1 @@
-<strong>Issue</strong>@<%= issue.user.first_name %>: <%= issue.reason %><br>
+@<%= issue.user.first_name %> - <%= issue.reason %><br>
