--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -53,10 +53,10 @@ margin-right: auto;
 top: 2.5em;
 border-collapse: collapse;
 }
-th{
+.user_chore_count > th{
 background-color: #4E99A3;
 }
-tr{
+.user_chore_count > tr{
 background-color: #0BBCE3;
 }
 .user_chore_count td {
