--- a/app/views/communal_items/_item.html.erb
+++ b/app/views/communal_items/_item.html.erb
@@ -55,7 +55,7 @@
   <%= form_for :issue, url: "/houses/#{@house.id}/communal_items/#{item.id}/issue", html: { class: "item_issue"} do |f| %>
     <%= f.label :reason %>
     <%= f.text_area :reason %>
-    <%= f.submit "Submit Issue" %>
+    <%= f.submit "Submit Issue", class: "button tiny" %>
   <% end %>
   </div>
 
