--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -5,7 +5,7 @@
 Join a House
 <br><br>
 <% @houses.each do |house| %>
-<%= house.name %> <%= link_to "Join", house_path(house) %><br>
+<%= house.name %> <%= link_to "Join", "/houses/#{house.id}/join" %><br>
 <% end %>
   </div>
   <div class="large-3 columns"><br /></div>
