--- a/app/views/events/_issue.html.erb
+++ b/app/views/events/_issue.html.erb
@@ -1,2 +1,3 @@
-@<%= issue.user.first_name %> - <%= issue.reason %><br>
+@<%= issue.user.first_name %> - <%= issue.reason %> <%= link_to "Delete", "/houses/#{house.id}/events/#{event.id}/issues/#{issue.id}", method: :delete,
+      data: {confirm: "Are you sure?"}, :class => "destroy_event"%><br>
 
