--- a/app/views/communal_items/_issue.html.erb
+++ b/app/views/communal_items/_issue.html.erb
@@ -1,1 +1,4 @@
-@<%= issue.user.first_name %> - <%= issue.reason %><br>
+@<%= issue.user.first_name %> - <%= issue.reason %> 
+<%= link_to "Delete", "/houses/#{house.id}/communal_items/#{item.id}/issues/#{issue.id}", method: :delete,
+      data: {confirm: "Are you sure?"}, :class => "destroy_event"%>
+<br>
