--- a/app/views/houses/roommates.html.erb
+++ b/app/views/houses/roommates.html.erb
@@ -2,16 +2,23 @@
   <div class="small-6 large-2 columns"><br></div>
   <div class="small-6 large-8 columns">
     <% @roommates.each do |roommate|%>
-    <fieldset>
+        <fieldset>
+
+    <table class="roommate-table">
+    <tr><td>
     <% if roommate.avatar.url != "/images/original/missing.png"%>
-    <%= image_tag roommate.avatar.url(:medium) %>
+    <%= image_tag roommate.avatar.url(:avatar) %>
     <%end%>
-    <h3><%=roommate.first_name + " "%><%=roommate.last_name%></h3>
+    </td>
+    <td><h3><%=roommate.first_name + " "%><%=roommate.last_name%></h3>
       <% if roommate.phone != nil %>
       <%=roommate.phone %><br>
       <%end%>
       <%= roommate.email %>
+      </td></tr>
+    </table>
     </fieldset>
+
     <%end%>
   </div>
   <div class="small-12 large-2 columns"><br></div>
