--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
   <div class="small-6 large-8 columns">
 
     <div id="event_list">
-      <h4>Events:</h4>
+      <h1 class="event-title">Events</h1>
       <% if @events == nil %>
       <p>Your house has has no events</p>
       <% else %>
