--- a/app/views/chores/_form.html.erb
+++ b/app/views/chores/_form.html.erb
@@ -1,6 +1,9 @@
-   <h4 style="text-align:center">New Chore</h4>
+
   <%= form_for :chore, url: house_chores_path(@house) do |f| %>
+  <fieldset>
+  <legend>Chores</legend>
   <%= f.label :task %>
-  <%= f.text_field :task, :class => "chore_fields" %><br><br>
+  <%= f.text_field :task, :class => "chore_fields" %>
   <%= f.submit "Add Chore", :class => "button radius" %>
+  </fieldset>
   <% end %>
