--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,9 @@
  *= require_self
  *= require_tree .
  */
+.rule-title {
+  text-align: center;
+}
 
 .event-title {
   text-align: center;
@@ -99,6 +102,7 @@ form.item_issue {
 
 .rule-content {
   width: 70%;
+  font-size: 20px;
 }
 
 .rule-parts {
