--- a/app/views/rules/_issue.html.erb
+++ b/app/views/rules/_issue.html.erb
@@ -1,2 +1,1 @@
-@<%= issue.user.first_name %> - <%= issue.reason %> <%= link_to "Delete", "/houses/#{house.id}/rules/#{rule.id}/issues/#{issue.id}", method: :delete,
-      data: {confirm: "Are you sure?"}, :class => "destroy_event"%><br>
+@<%= issue.user.first_name %> - <%= issue.reason %><br>
