--- a/app/views/events/_issue.html.erb
+++ b/app/views/events/_issue.html.erb
@@ -1,7 +1,2 @@
-<h2>Issue for "<%= @chore.task %>"</h2>
+@<%= issue.user.first_name %> - <%= issue.reason %>
 <br>
-
-<%= form_for :issue, url: "/chores/#{@chore.id}/issues" do |f|%>
-  Reason: <br><%= f.text_area :task %><br><br>
-  <%= f.submit "Submit", :class => "button"  %>
-<%end%>
