working communal item

--- a/app/views/communal_items/index.html.erb
+++ b/app/views/communal_items/index.html.erb
@@ -4,10 +4,8 @@
 <h1 class="item-title">Inventory</h1>
     <% if @items.length != 0 %>
 
-      <% @items_by_level.each do |level, items_in_level| %>
-        <% if level == "out" %>
           <div class="fridge-today"><span class="today">OUT OF STOCK</span></div>
-          <% items_in_level.each do |item| %>
+          <% @items_out.each do |item| %>
           <div class="each-item">
              <div class="item-issues"><%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%></div> <span class="item-name" id="out"><%= item.name.split.map(&:capitalize).join(' ') %></span>
              <%= render partial: "item", locals: { item: item } %>
@@ -15,9 +13,8 @@
           </div>
           <% end %>
 
-        <% elsif level == "low" %>
           <div class="fridge-today"><span class="today">LOW STOCK</span></div>
-          <% items_in_level.each do |item| %>
+          <% @items_low.each do |item| %>
           <div class="each-item">
             <span class="item-name" id="low"><%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <%= item.name.split.map(&:capitalize).join(' ') %></span>
             <%= render partial: "item", locals: { item: item } %>
@@ -25,17 +22,16 @@
           </div>
           <% end %>
 
-        <% elsif level == "high" %>
           <div class="fridge-today"><span class="today">IN STOCK</span></div>
-            <% items_in_level.each do |item| %>
+            <% @items_high.each do |item| %>
             <div class="each-item">
               <span class="item-name" id="high"><%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <%= item.name.split.map(&:capitalize).join(' ') %></span>
               <%= render partial: "item", locals: { item: item } %>
               <hr>
             </div>
             <% end %>
-        <% end %>
-      <% end %>
+
+
     <% end %>
 
 
