--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,7 +16,7 @@
                 <%= message.content %></td>
             <td valign="bottom" class="message-delete">
               <% if message.author == current_user %>
-                <%= link_to "Delete", house_message_path(@house, message), method: :delete, data: {confirm: "Are you sure?"}%></td>
+                <%= link_to "Delete", house_message_path(@house, message), class: "delete-button", id:"/houses/#{@house.id}/messages/#{message.id}", remote: true %></td>
               <% end %>
           </tr>
         </table>
