Fix house menu so not displayed if you do not have a house

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,14 +1,15 @@
 <div class="each-event">
-      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%> <span class="item-name" id="high">@<%= event.user.first_name.capitalize %>: <%= event.name.split.map(&:capitalize).join(' ') %></span> <br>
+      <%= image_tag("issue-mark-not-square.png", size: "50x50", class: "issue-mark")%> <span class="item-name"> <%= event.name.split.map(&:capitalize).join(' ') %></span> <br>
       <div class="item-info">
-      <strong>Description:</strong> <%= event.description %><br>
+      <b>Created by: </b><%= link_to "@#{event.user.first_name.capitalize}", user_path(event.user) %><br>
+      <b>Description:</b> <%= event.description %><br>
       <span id="low"><strong>Date:</strong> <%= event.date%></span><br>
-      
-      <%= link_to 'Edit', edit_house_event_path(@house, event) %> / 
+
+      <%= link_to 'Edit', edit_house_event_path(@house, event) %> /
       <%= link_to "Delete", house_event_path(@house, event), method: :delete,
       data: {confirm: "Are you sure?"}, :class => "destroy_event"%>
       <br>
-      
+
       <%= form_for :issue, url: "/houses/#{@house.id}/events/#{event.id}/issue", html: { class: "event_issue"} do |f| %>
       <%= f.text_area :reason, :placeholder => "Reason" %>
       <%= f.submit "Submit Issue", class: "button tiny" %>
@@ -19,6 +20,6 @@
       <%= render partial: "issue", locals: { issue: issue }, layout: false %>
       <% end %>
       <% end %>
-      </div>  
-      </div>    
+      </div>
+      </div>
       </div>
