--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,18 +1,22 @@
 <div class="row">
   <div class="large-3 columns"><br />
   </div>
-  <% if @chores != nil %>
-  <div id="chore_list" >
-    <div id="chore_title"><h4>Chores</h4></div>
-    <% @chores.each do |chore| %>
-    <div class="chore">
-      <% log = @user.chore_logs.where(chore_id: chore.id ) %>
-     <%= button_to "Delete", chore_path(chore), method: :delete, :class => ["button tiny", "button alert", "delete_chore"], data: {confirm: "Are you sure?"}  %>
-      <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%>
-      <%= form_for :issue, url: " /houses/#{@house.id}/chores/#{chore.id}/issue", html: { class: "chore_issue"} do |f| %>
-      <%= f.text_area :reason, :placeholder => "Reason" %>
-      <%= f.submit "Submit Issue", class: "button tiny" %>
-      <% end %>
+    <% if @chores.empty? %>
+        <% @zip = Address.find_by(addressable_id: @house.id, addressable_type: "House").zip_code %>
+        <h3 class="header-empty">You don't have a chore chart.<br>
+        <%= link_to "Would you rather hire a cleaning service?", "http://lmgtfy.com/?q=cleaning+services+near+#{@zip}" %></h3>
+    <% else %>
+    <div id="chore_list">
+      <div id="chore_title"><h4>Chores</h4></div>
+      <% @chores.each do |chore| %>
+      <div class="chore">
+        <% log = @user.chore_logs.where(chore_id: chore.id ) %>
+       <%= button_to "Delete", chore_path(chore), method: :delete, :class => ["button tiny", "button alert", "delete_chore"], data: {confirm: "Are you sure?"}  %>
+        <%= image_tag("issue-mark.png", size: "50x50", class: "issue-mark")%>
+        <%= form_for :issue, url: " /houses/#{@house.id}/chores/#{chore.id}/issue", html: { class: "chore_issue"} do |f| %>
+        <%= f.text_area :reason, :placeholder => "Reason" %>
+        <%= f.submit "Submit Issue", class: "button tiny" %>
+        <% end %>
 
       <div class="chore_task"><h5><%= chore.task %></h5> <br></div>
 
@@ -53,8 +57,8 @@
       </ul>
       <div class="chore_issues">
         <% chore.issues.each do |issue| %>
-        
 
+        <% end %>
       </div>
     </div>
     <% end %>
