--- a/app/views/rules/index.html.erb
+++ b/app/views/rules/index.html.erb
@@ -1,9 +1,12 @@
 <div class="row">
   <div class="small-6 large-2 columns"><br></div>
   <div class="small-6 large-8 columns">
-      <h1 class="rule-title">Rules</h1>
       <div id="rule_list">
-        <% if @rules != nil %>
+        <% if @rules.empty? %>
+        <h3 class="header-empty">There are no rules in your house.<br>
+        I see you like to live dangerously.</h3>
+        <% else %>
+        <h1 class="rule-title">Rules</h1>
         <%= render @rules %>
         <%end%>
       </div>
