--- a/app/views/communal_items/_item.html.erb
+++ b/app/views/communal_items/_item.html.erb
@@ -58,9 +58,9 @@
   </div>
 
   <div class="issue-body">
-    <% if item.issues.count > 0%>
+    <% if item.issues %>
+      <div id="issue-intro"></div>
       <div class="issue-content">
-        <span id="issue-intro">This item has issues!</span><br>
       <% item.issues.each do |issue| %>
         <%= render partial: "issue", locals: { issue: issue} %>
       <% end %>
