--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,9 +6,12 @@
 
     <h3><div class="page_header">Sign up</div></h3>
     <br>
-    <% if flash[:error] %>
-    <%= flash[:error] %>
+    <% if @user.errors.full_messages.any? %>
+        <% @user.errors.full_messages.each do |error_message| %>
+            <%= error_message %> <br/>
+        <% end %>
     <% end %>
+
 
     <%= form_for :user, url: '/users', :html => { :multipart => true } do |f|%>
     <fieldset>
